src/objects/vlocity_ins__InsuranceClaimLitigation__c.object
<CustomObject>
    <description>Represents information about legal cases (i.e. litigation) filed against an insurance company on a claim. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__CaseNumber__c</fullName>
        <externalId>true</externalId>
        <label>Case #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Claim Litigation</relationshipLabel>
        <relationshipName>ClaimLitigation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>Settle Prior Trial</fullName>
                </value>
                <value>
                    <fullName>Settle During Trial</fullName>
                </value>
                <value>
                    <fullName>Verdict for Defendant</fullName>
                </value>
                <value>
                    <fullName>Verdict for Plaintiff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLegalTeamAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Team Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusAsOfDate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrialDate__c</fullName>
        <label>Trial Date</label>
        <type>Date</type>
    </fields>
    <label>Claim Litigation</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Litigation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>